# Arctis-Sound-Manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SESSION.md  TODO.md  arctis-sound-manager.spec  capture_events.py  crowdin.yml  presets_manifest.json  pyproject.toml  test_anc.py
.copr/: Makefile
.notes/: fix_wireplumber_crash.md
aur/: .SRCINFO  PKGBUILD  arctis-sound-manager.install
aur/src/Arctis-Sound-Manager-1.0.0/: CHANGELOG.md  TODO.md  pyproject.toml
aur/src/Arctis-Sound-Manager-1.0.0/.github/workflows/: wheel-install-test.yaml
aur/src/Arctis-Sound-Manager-1.0.0/docs/: device_configuration_file_specs.md  device_support.md
aur/src/Arctis-Sound-Manager-1.0.0/scripts/: distrobox.sh
aur/src/Arctis-Sound-Manager-1.0.0/src/linux_arctis_manager/: config.py  core.py  pw_utils.py  settings.py  status_parser_fn.py  systemd.py  utils.py
aur/src/Arctis-Sound-Manager-1.0.0/src/linux_arctis_manager/desktop/: ArctisManager.desktop
aur/src/Arctis-Sound-Manager-1.0.0/src/linux_arctis_manager/gui/: main_app.py  settings_widget.py  status_widget.py
aur/src/Arctis-Sound-Manager-1.0.0/src/linux_arctis_manager/gui/qt_widgets/: q_dual_state.py
aur/src/Arctis-Sound-Manager-1.0.0/src/linux_arctis_manager/lang/: en.ini
aur/src/Arctis-Sound-Manager-1.0.0/src/linux_arctis_manager/scripts/: cli.py
aur/src/Arctis-Sound-Manager-1.0.0/tests/: install-wheel-test.sh  test_config.py  test_status_parser_fn.py
cloudflare/: migrate_fix.sql  migrate_v2.sql  migrate_v3.sql  schema.sql  worker.js  wrangler.toml
debian/: 91-steelseries-arctis.rules  arctis-manager.service  arctis-video-router.service  asm-first-run.desktop  build-deb.sh  changelog  control  copyright  postinst  postrm  rules
dinit/: arctis-gui  arctis-manager  arctis-video-router  pipewire-filter-chain
docs/: dbus.md  device_configuration_file_specs.md  device_support.md  index.md  install.sh
nix/: README.md  default.nix  flake.nix  module.nix  package.nix  shell.nix  sources.nix
scripts/: arctis-video-router.service  asm-diag-dinit.py  asm-diag-initsys.py  check-deps-drift.py  check-packaging-drift.py  clean-reinstall.sh  clean_reinstall.sh  distrobox-diag.sh  distrobox-install.sh  distrobox.sh  filter-chain.service  generate_debian_changelog.py  generate_metainfo_releases.py  generate_srcinfo.py  (+8 more)
(+653 files in other folders)
