[project]
name = "linux-arctis-manager"
version = "2.0.0-dev"
description = "A replacement for SteelSeries GG software, to manage your Arctis device on Linux!"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dbus-next>=0.2.3",
    "pulsectl>=24.12.0",
]

[project.scripts]
lam-daemon = "linux_arctis_manager.scripts.daemon:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
