[project]
name = "arctis-sound-manager"
version = "1.0.36"
description = "A replacement for SteelSeries GG software, to manage your Arctis device on Linux!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbus-next>=0.2.3",
    "pulsectl>=24.12.0",
    "pyside6>=6.10.1",
    "pyudev>=0.24.4",
    "pyusb>=1.3.1",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
asm-daemon = "arctis_sound_manager.scripts.daemon:main"
asm-cli = "arctis_sound_manager.scripts.cli:main"
asm-gui = "arctis_sound_manager.scripts.gui:main"
asm-router = "arctis_sound_manager.scripts.video_router:main"
asm-setup = "arctis_sound_manager.scripts.setup:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]

[tool.pyright]
reportUnknownMemberType = "none"
extraPaths = ["src"]
